// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:number 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    style="position: relative;"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  range
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-RangeControl cxd-RangeControl--withInput cxd-RangeControl--clearable cxd-Form-control"
          >
            <div
              aria-disabled="false"
              class="cxd-InputRange"
            >
              <span
                class="cxd-InputRange-label cxd-InputRange-label--min"
              >
                <span
                  class="cxd-InputRange-labelContainer"
                >
                  0
                </span>
              </span>
              <div
                class="cxd-InputRange-track cxd-InputRange-track--background"
              >
                <div
                  class="cxd-InputRange-track"
                  style="left: 0%; width: 40%;"
                />
                <span
                  class="cxd-InputRange-sliderContainer"
                  style="position: absolute; left: 40%;"
                >
                  <span
                    class="cxd-InputRange-label cxd-InputRange-label--value"
                  >
                    <span
                      class="cxd-InputRange-labelContainer"
                    >
                      8
                    </span>
                  </span>
                  <div
                    aria-valuemax="20"
                    aria-valuemin="0"
                    aria-valuenow="8"
                    class="cxd-InputRange-slider"
                    draggable="false"
                    role="slider"
                    tabindex="0"
                  />
                </span>
              </div>
              <span
                class="cxd-InputRange-label cxd-InputRange-label--max"
              >
                <span
                  class="cxd-InputRange-labelContainer"
                >
                  20
                </span>
              </span>
            </div>
            <span
              class="cxd-InputRange-label cxd-InputRange-label--mid"
              style="left: 50%;"
            >
              <span
                class="cxd-InputRange-labelContainer"
              >
                10
                
              </span>
            </span>
            <div
              class="cxd-InputRange-input"
            >
              <input
                class="is-active"
                name="a"
                type="text"
                value="8"
              />
            </div>
            <a
              class="cxd-InputRange-clear is-active"
            >
              <icon-mock
                classname="icon icon-close"
                icon="close"
              />
            </a>
          </div>
        </div>
      </form>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:range:multiple 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    style="position: relative;"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  range
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-RangeControl cxd-RangeControl--withInput cxd-RangeControl--clearable is-multiple cxd-Form-control"
          >
            <div
              aria-disabled="false"
              class="cxd-InputRange"
            >
              <span
                class="cxd-InputRange-label cxd-InputRange-label--min"
              >
                <span
                  class="cxd-InputRange-labelContainer"
                >
                  0
                </span>
              </span>
              <div
                class="cxd-InputRange-track cxd-InputRange-track--background"
              >
                <div
                  class="cxd-InputRange-track is-active"
                  style="left: 0%; width: 100%;"
                />
                <span
                  class="cxd-InputRange-sliderContainer"
                  style="position: absolute; left: 0%;"
                >
                  <span
                    class="cxd-InputRange-label cxd-InputRange-label--value"
                  >
                    <span
                      class="cxd-InputRange-labelContainer"
                    >
                      0
                    </span>
                  </span>
                  <div
                    aria-valuemax="20"
                    aria-valuemin="0"
                    aria-valuenow="0"
                    class="cxd-InputRange-slider"
                    draggable="false"
                    role="slider"
                    tabindex="0"
                  />
                </span>
                <span
                  class="cxd-InputRange-sliderContainer"
                  style="position: absolute; left: 100%;"
                >
                  <span
                    class="cxd-InputRange-label cxd-InputRange-label--value"
                  >
                    <span
                      class="cxd-InputRange-labelContainer"
                    >
                      20
                    </span>
                  </span>
                  <div
                    aria-valuemax="20"
                    aria-valuemin="0"
                    aria-valuenow="20"
                    class="cxd-InputRange-slider"
                    draggable="false"
                    role="slider"
                    tabindex="0"
                  />
                </span>
              </div>
              <span
                class="cxd-InputRange-label cxd-InputRange-label--max"
              >
                <span
                  class="cxd-InputRange-labelContainer"
                >
                  20
                </span>
              </span>
            </div>
            <span
              class="cxd-InputRange-label cxd-InputRange-label--mid"
              style="left: 50%;"
            >
              <span
                class="cxd-InputRange-labelContainer"
              >
                10
                
              </span>
            </span>
            <div
              class="cxd-InputRange-input is-multiple"
            >
              <input
                class=""
                name="a"
                type="text"
                value="0"
              />
              <span
                class="cxd-InputRange-input-separator"
              >
                 - 
              </span>
              <input
                class=""
                name="a"
                type="text"
                value="20"
              />
            </div>
            <a
              class="cxd-InputRange-clear is-active"
            >
              <icon-mock
                classname="icon icon-close"
                icon="close"
              />
            </a>
          </div>
        </div>
      </form>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;
